syntax = "proto2";

package stremio.core.models;

option java_package = "com.stremio.core.models";

import "stremio/core/types/library.proto";

message ContinueWatchingPreview {
  repeated stremio.core.types.LibraryItem library_items = 1;
}